--- a/public/stylesheets/cards.styl
+++ b/public/stylesheets/cards.styl
@@ -65,6 +65,7 @@ section.set {
       
       z-index:1;
       opacity:0;
+      white-space: normal;
 
       &:first-child {
         margin-left:-325px;
